--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,4 @@
 
-
 $primary-color: gold;
 $secondary-color: purple;
 
@@ -7,7 +6,7 @@ $secondary-color: purple;
 
 
 body {
-    background: red;
+    background-color: cadetblue;
 }
  
 h1 {
