--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -1,8 +1,12 @@
-/* Mobile: 320px = 20em */
+/* Mobile: 320px = 20em (spending some time changed padding on video)*/
 @media screen and (min-width: 20em) { 
 
    .page {
        display: block;
+    }
+    
+    article p {
+        padding: 1em;
     }
     
     
@@ -28,12 +32,20 @@
         width: 50%;
     }
     
+    section {
+        padding: 1em;
+        
+    
+    }
+    
   /* Diagnostic Styling. Delete When Done. */
   body:before {
        background: yellow;
        content: "Tablet Size";
   }
-
+   
+    
+    
 }
 
 /* Desktop: 1280px = 80em */
@@ -47,3 +59,11 @@
   }
 
 }
+header h1 {
+    display: none;
+    
+}
+ section {
+        
+        width: 75%;
+    }
