--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -52,18 +52,22 @@
 @media screen and (min-width: 80em) { 
       
     
-  /* Diagnostic Styling. Delete When Done. */
+header h1 {
+    display: none;
+    
+    article h1 {
+        display: block; 
+    }
+    
+}
+ section {
+        
+        padding-top: 0;
+    }
+     /* Diagnostic Styling. Delete When Done. */
   body:before {
        background: yellow;
        content: "Desktop Size";
   }
 
 }
-header h1 {
-    display: none;
-    
-}
- section {
-        
-        width: 75%;
-    }
