--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,11 +1,10 @@
 /* Grand Central Station. TOC. Vertex. A Hub. */
 
-@import "global";
+
 @import "grid";
+@import "player";
+@import "global";
 @import "media-queries";
-
-@import "mediaplayer";
-
 body {
     background-color: aqua;
 }
