--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -5,6 +5,7 @@
 @import "player";
 @import "global";
 @import "media-queries";
+
 body {
-    background-color: aqua;
+    background-color: green;
 }
