--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,5 +7,5 @@
 @import "media-queries";
 
 body {
-    background-color: green;
+    background-image: url(/img/2632388-green-palm-Stock-Photo-palm-leaves-trees.jpg);
 }
