--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,5 +7,6 @@
 @import "media-queries";
 
 body {
-    background-image: url(/img/2632388-green-palm-Stock-Photo-palm-leaves-trees.jpg);
+    background-image: url(/img/bb.jpg);
+    background-repeat: no-repeat;
 }
