--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -49,7 +49,7 @@
 }
 
 /* Desktop: 1280px = 80em */
-@media screen and (min-width: 80em) { 
+@media screen and (max-width: 48em) { 
       
     
 header h1 {
@@ -60,9 +60,18 @@ header h1 {
     }
     
 }
- section {
+  main {
+        padding: 3em;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+   
+    
+    section {
+        padding: 3em;
         
-        padding-top: 0;
+    
     }
      /* Diagnostic Styling. Delete When Done. */
   body:before {
